--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,12 @@ body{
 	justify-content: center;
 	align-items: center;
 }
+.landing-page h1{
+	font-size: 4.8rem;
+	font-weight:700;
+	margin-top: -3.9rem;
+}
+
 .btn-box{
 	padding:1.2rem;
 }
