prototype landing page with second logo

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,16 +7,14 @@ body{
 }
 
 .landing-page{
-	height:100vh;
-
+	height:100%;
 	display: flex;
 	justify-content: center;
-	align-items: center;
+	align-items: center; 
 }
 .landing-page h1{
-	font-size: 4.8rem;
+	font-size: 4.5rem;
 	font-weight:700;
-	margin-top: -3.9rem;
 }
 
 .btn-box{
