--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,12 @@ body{
 	height:100%;
 	display: flex;
 	justify-content: center;
-	align-items: center; 
+	align-items: center;
+
+	
+}
+.logo img{
+	height:350px;
 }
 .landing-page h1{
 	font-size: 4.5rem;
