--- a/css/styles.css
+++ b/css/styles.css
@@ -15,13 +15,24 @@ body{
 	
 }
 .logo img{
-	height:350px;
+	height:230px;
+	
+}
+@media (min-width:600px) {
+  .logo img {
+    height:340px;
+  }
 }
 .landing-page h1{
-	font-size: 4.5rem;
+	font-size: 2.5rem;
 	font-weight:700;
+}
+@media (min-width:600px) {
+  .landing-page h1 {
+    font-size: 4.3rem;
+  }
 }
 
 .btn-box{
-	padding:1.2rem;
+	padding:1.5rem;
 }
